src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>MX_RTE_Direccion_General__c</fullName>
        <description>Campo utilizado para seleccionar la dirección general asociada al contacto</description>
        <label>Dirección General</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARCHITECTURE ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>ARCHITECTURE SECURITY</fullName>
                </value>
                <value>
                    <fullName>ARQUITECTURA BACKEND CANALES</fullName>
                    <isActive>false</isActive>
                    <label>ARQUITECTURA BACKEND CANALES</label>
                </value>
                <value>
                    <fullName>ARQUITECTURA MÉXICO</fullName>
                    <isActive>false</isActive>
                    <label>ARQUITECTURA MÉXICO</label>
                </value>
                <value>
                    <fullName>BANCA MAYORISTA Y DE INVERSION</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BUSINESS DEVELOPMENT</fullName>
                </value>
                <value>
                    <fullName>BUSINESS PROCESS ENGINEERING</fullName>
                    <isActive>false</isActive>
                    <label>BUSINESS PROCESS ENGINEERING</label>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>DATA MANAGER Y GESTION</fullName>
                    <isActive>false</isActive>
                    <label>DATA MANAGER Y GESTION</label>
                </value>
                <value>
                    <fullName>DESARROLLO COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>DG ENGINEERING &amp; HOD MX</fullName>
                </value>
                <value>
                    <fullName>DIGITAL SALES</fullName>
                </value>
                <value>
                    <fullName>DIGITAL SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>ENGINEERING &amp; HOD</fullName>
                </value>
                <value>
                    <fullName>FINANZAS</fullName>
                </value>
                <value>
                    <fullName>GESTIÓN DE RIESGO OPERACIONAL</fullName>
                </value>
                <value>
                    <fullName>HIPOTECARIO</fullName>
                </value>
                <value>
                    <fullName>JURÍDICO</fullName>
                </value>
                <value>
                    <fullName>MARKETING</fullName>
                    <isActive>false</isActive>
                    <label>MARKETING</label>
                </value>
                <value>
                    <fullName>MARKETING, DIGITAL CAPABILITIES &amp; UX</fullName>
                </value>
                <value>
                    <fullName>MEDIOS DE PAGO</fullName>
                    <isActive>false</isActive>
                    <label>MEDIOS DE PAGO</label>
                </value>
                <value>
                    <fullName>MULTIASISTENCIA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>PRESIDENCIA</fullName>
                </value>
                <value>
                    <fullName>PRESTAMOS</fullName>
                </value>
                <value>
                    <fullName>RIESGOS ADMISION</fullName>
                </value>
                <value>
                    <fullName>RIESGOS MEXICO</fullName>
                </value>
                <value>
                    <fullName>SEGUROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Edificio__c</fullName>
        <label>Edificio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DATIO</fullName>
                </value>
                <value>
                    <fullName>POLANCO</fullName>
                </value>
                <value>
                    <fullName>REFORMA</fullName>
                </value>
                <value>
                    <fullName>TECNOPARQUE</fullName>
                </value>
                <value>
                    <fullName>REMOTO</fullName>
                </value>
                <value>
                    <fullName>OTRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Origen__c</fullName>
        <description>Campo para seleccionar el origen del contacto</description>
        <label>Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interno</fullName>
                </value>
                <value>
                    <fullName>Externo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Piso__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Piso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Rol__c</fullName>
        <description>Campo para capturar el rol del usuario</description>
        <label>Rol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Área de apoyo</fullName>
                </value>
                <value>
                    <fullName>COACH</fullName>
                </value>
                <value>
                    <fullName>LIDER DEL PROYECTO</fullName>
                </value>
                <value>
                    <fullName>Product Owner</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>RCI</fullName>
                </value>
                <value>
                    <fullName>RTE</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Scrum Team</fullName>
                    <isActive>false</isActive>
                    <label>Scrum Team</label>
                </value>
                <value>
                    <fullName>Scrum Team Remoto</fullName>
                    <isActive>false</isActive>
                    <label>Scrum Team Remoto</label>
                </value>
                <value>
                    <fullName>Staffer</fullName>
                </value>
                <value>
                    <fullName>Stake Holder</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>UX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_chk_Bloqueado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nuevo campo para tele marketing e identificar si un contacto esta bloqueado</description>
        <label>Bloqueado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WB_Cliente_Unico_BBVA__c</fullName>
        <description>ID de cliente único del banco</description>
        <label>Cliente Único BBVA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <!-- <fields>
        <fullName>MX_WB_Cliente_Unico_BBVA__c</fullName>
        <label>Cliente Único BBVA</label>
        <length>50</length>
        <type>Text</type>
    </fields> -->
    <fields>
        <fullName>MX_WB_Cliente_Unico_Seguros__c</fullName>
        <label>Cliente Único Seguros</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Delegacion__c</fullName>
        <description>Nuevo campo para almacenar la delegación de telemarketing</description>
        <label>Delegación</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_int_TerminacionTarjeta__c</fullName>
        <description>Nuevo campo tele marketing para almacenar los últimos 5 dígitos de la tarjeta bancaria.</description>
        <inlineHelpText>Los últimos 5 dígitos de la tarjeta, solo acepta caracteres numéricos.</inlineHelpText>
        <label>Terminación Tarjeta</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_lst_ProductoInteres__c</fullName>
        <description>Nuevo campo para almacenar el producto de interés de contacto para telemarketing</description>
        <label>Producto de Interés</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto seguro Dinamico</fullName>
                    <label>Auto seguro Dinámico</label>
                </value>
                <value>
                    <fullName>Seguro de auto fronterizo Bancomer</fullName>
                </value>
                <value>
                    <fullName>Seguro de auto nacionalizado</fullName>
                </value>
                <value>
                    <fullName>Seguro de Moto Bancomer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación entre contrato y oportunidad.</description>
        <label>Cotización</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contratos</relationshipLabel>
        <relationshipName>Contratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono1__c</fullName>
        <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
        <label>Teléfono 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono2__c</fullName>
        <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
        <label>Teléfono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono3__c</fullName>
        <description>Nuevo campo de teléfono para contactabilidad de telemarketing</description>
        <label>Teléfono 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación a producto.</description>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contratos</relationshipLabel>
        <relationshipName>Contratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_TipoTelefono1__c</fullName>
        <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
        <label>Tipo de Teléfono 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_TipoTelefono2__c</fullName>
        <description>Muestra si el teléfono es móvil o fijo.</description>
        <label>Tipo de Teléfono 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <!-- <fields>
        <fullName>MX_WB_TipoTelefono2__c</fullName>
        <label>Tipo de Teléfono 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields> -->
    <fields>
        <fullName>MX_WB_TipoTelefono3__c</fullName>
        <description>Nuevo campo para identificar el tipo de teléfono para proceso de telemarketing</description>
        <label>Tipo de Teléfono 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Apellido_Materno__c</fullName>
        <description>Nuevo campo para apellido Materno utilizado en Telemarketing</description>
        <label>Apellido Materno</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_BCOM__c</fullName>
        <description>&quot;0 = NO tiene el canal1-A = Si cuenta con el canal y esta activo.1-I = Si cuenta con el canal y esta inactivo por cualquier situación.&quot;</description>
        <label>BCOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_BMOV__c</fullName>
        <description>&quot;0 = NO tiene el canal 1-A = Si cuenta con el canal y esta activo. 1-I = Si cuenta con el canal y esta inactivo por cualquier situación.&quot;</description>
        <label>BMOV</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Clave_Texto__c</fullName>
        <description>Nuevo campo para telemarketing TREADMENCODE generado por affinium en resguardo</description>
        <label>Clave Texto</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Colonia__c</fullName>
        <description>Nuevo campo de telemarketing para colonia</description>
        <label>Colonia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Extension1__c</fullName>
        <description>Nuevo campo para extensión de teléfono de telemarketing</description>
        <label>Extensión 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Extension2__c</fullName>
        <description>Código de extensión de marcado de Telemarketing</description>
        <label>Extension2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <!-- <fields>
        <fullName>MX_WB_txt_Extension2__c</fullName>
        <label>Extension2</label>
        <length>18</length>
        <type>Text</type>
    </fields> -->
    <fields>
        <fullName>MX_WB_txt_Extension3__c</fullName>
        <description>Nuevo campo para extensión de teléfono de telemarketing</description>
        <label>Extensión 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_NumClienteEnmascarado__c</fullName>
        <description>Telemarketing</description>
        <label>Número Cliente Enmascarado</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <!-- <fields>
        <fullName>MX_WB_txt_NumClienteEnmascarado__c</fullName>
        <label>Número Cliente Enmascarado</label>
        <length>8</length>
        <type>Text</type>
    </fields> -->
    <fields>
        <fullName>MX_WB_txt_Prefijo_1__c</fullName>
        <description>Campo de telemarketing prefijo 1</description>
        <label>Prefijo 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Prefijo_2__c</fullName>
        <description>Campo de telemarketing prefijo 2</description>
        <label>Prefijo 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Prefijo_3__c</fullName>
        <description>Campo de telemarketing prefijo 3</description>
        <label>Prefijo 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_RFC__c</fullName>
        <description>Nuevo campo para RFC de Telemarketing</description>
        <label>RFC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Usuario_de_red__c</fullName>
        <description>Campo de tipo texto para la aplicación RTE, permite ingresar el usuario de red del contacto</description>
        <label>Usuario de red</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_de_nomina__c</fullName>
        <formula>Owner.No_de_nomina__c</formula>
        <label>No. de nómina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_cuenta_ASD__c</fullName>
        <description>Número consecutivo de cuenta para ASD.</description>
        <displayFormat>ASD-{MM}{DD}{00000}</displayFormat>
        <label>Numero de cuenta ASD</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Oficina1__c</fullName>
        <formula>TEXT(Owner.Oficina__c)</formula>
        <label>Oficina Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_referencia__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Teléfono referencia</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_de_contacto__c</fullName>
        <label>Tipo de contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CONTACTO EJECUTIVO</fullName>
                </value>
                <value>
                    <fullName>CONTACTO EJECUTIVO Y TOMA DECISIONES</fullName>
                </value>
                <value>
                    <fullName>TOMA DECISIONES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UG__c</fullName>
        <formula>Owner.UG__c</formula>
        <label>UG</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MX_RTE_Contactos_RTE</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>MX_RTE_Rol__c</columns>
        <columns>MX_RTE_Direccion__c</columns>
        <columns>MX_RTE_Direccion_General__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.MX_RTE_Usuarios</value>
        </filters>
        <label>Contactos RTE</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MX_RTE_Admin_RTE</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Usuarios_WF_Campa_as</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>GBL_WF_Autorizador_DG__c</columns>
        <columns>GBL_WF_Director__c</columns>
        <columns>GBL_WF_Funcion__c</columns>
        <columns>GBL_WF_Jefe__c</columns>
        <columns>GBL_WF_Suplente__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.GBL_WF_Usuarios</value>
        </filters>
        <filters>
            <field>GBL_WF_Funcion__c</field>
            <operation>equals</operation>
            <value>Generador</value>
        </filters>
        <label>Usuarios WF Campañas</label>
    </listViews>
    <recordTypes>
        <fullName>ASD</fullName>
        <active>true</active>
        <label>ASD</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPyP_tre_Contacto</fullName>
        <active>true</active>
        <label>BPyP Contacto</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Usuarios</fullName>
        <active>true</active>
        <description>Tipo de registro para los usuarios de la aplicación Workflow</description>
        <label>Usuarios</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_Con_ContactoTelemarketing</fullName>
        <active>true</active>
        <label>Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_RTE_Usuarios</fullName>
        <active>true</active>
        <description>Tipo de registro para la captura de usuarios de RTE</description>
        <label>Usuario RTE</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Contact_Imp_Comercial</fullName>
        <active>true</active>
        <description>Tipo de registro para los usuarios de email to case</description>
        <label>Contactos Implementación Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Implementacion</fullName>
        <active>true</active>
        <description>Tipo de registro para los usuarios de email to case</description>
        <label>Implementacion</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Usuario_Socio</fullName>
        <active>true</active>
        <description>Tipo de registro para la captura de usuarios de Community Cloud</description>
        <label>Usuario Socio</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_tre_Contacto_PyME</fullName>
        <active>true</active>
        <description>Contacto PyME</description>
        <label>Contacto PyME</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Al_menos_una_forma_de_contacto</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISBLANK( Phone ), ISBLANK( HomePhone  ),  ISBLANK( MobilePhone ),  ISBLANK( OtherPhone  ),  ISBLANK( Email ),  ISBLANK( Email_personal__c ))</errorConditionFormula>
        <errorMessage>Es necesario registrar al menos una forma de contacto, ya sea un teléfono o un correo electrónico.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_CapturaNumeroOficina</fullName>
        <active>true</active>
        <description>Verifica que en el campo Phone se capturen digitos</description>
        <errorConditionFormula>AND (RecordType.DeveloperName =&quot;BPyP_Contacto_Plan_Cuenta&quot;, NOT(ISBLANK(Phone)) , NOT(ISNUMBER (Phone)))</errorConditionFormula>
        <errorMessage>Por favor capture un número teléfonico</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_CapturaNumeros</fullName>
        <active>true</active>
        <description>Verifica que en el campo HomePhone se capturen digitos</description>
        <errorConditionFormula>AND (RecordType.DeveloperName =&quot;BPyP_Contacto_Plan_Cuenta&quot;,NOT( ISBLANK(HomePhone)),NOT(ISNUMBER (HomePhone)))</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Por favor capture un número teléfonico</errorMessage>
    </validationRules>
</CustomObject>